--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,18 +4,18 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #fff;
     --foreground: #ededed;
   }
 }
 
 body {
-  color: var(--foreground);
+  color: #fff;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
