--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,27 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0ea5e9; /* Color of the thumb */
+  border-radius: 8px; /* Rounded corners */
+  transition: background-color 0.3s ease; /* Smooth transition for hover */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #0ea5e9; /* Color when hovered */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color of the track */
+  border-radius: 8px; /* Rounded corners for the track */
+}
+
+::-webkit-scrollbar-track:hover {
+  background-color: #e0e0e0; /* Hover effect on the track */
+}
+
